--- a/src/main/resources/templates/tags.html
+++ b/src/main/resources/templates/tags.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
+<h1 th:text="${attraction.name}"></h1>
+<table>
+    <tr th:each="tag: ${attraction.tags}">
+        <td th:text="${tag}"></td>
+    </tr>
+</table>
 
+<a th:href="@{/attraction/attractions}"><button>Go Back</button></a>
 </body>
 </html>
