--- a/src/main/resources/templates/tags.html
+++ b/src/main/resources/templates/tags.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Tags</title>
 </head>
 <body>
 <h1 th:text="${attraction.name}"></h1>
