--- a/src/main/resources/templates/attraction-add-form.html
+++ b/src/main/resources/templates/attraction-add-form.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Add attraction</h1>
 
-<form action="#" th:action="@{/attraction/save}" th:object="${addAttraction}" method="post">
+<form action="#" th:action="@{/attraction/save}" th:object="${attraction}" method="post">
     <label>Name:</label>
     <input type="text" th:field="*{name}">
     <br>
@@ -17,7 +17,7 @@
     <label>City:</label>
     <select th:field="*{city}">
         <option value="">--Please select--</option>
-        <option th:each="town: ${allCities}" th:value="${town}" th:text="${town}"></option>
+        <option th:each="town : ${allCities}" th:value="${town}" th:text="${town}"></option>
     </select>
     <br>
     <label>Tags:</label>
