cancel button virker, men er under save knappen

--- a/src/main/resources/templates/attraction-add-form.html
+++ b/src/main/resources/templates/attraction-add-form.html
@@ -26,7 +26,7 @@
     </div>
     <br>
     <button type="submit">Save</button>
-    <a th:href="@{/attraction/attractions}">Cancel</a>
 </form>
+<a th:href="@{/attraction/attractions}"><button>Cancel</button></a>
 </body>
 </html>
