--- a/src/main/resources/templates/attractionList.html
+++ b/src/main/resources/templates/attractionList.html
@@ -16,7 +16,7 @@
         <td th:text="${attraction.name}"></td>
         <td th:text="${attraction.description}"></td>
         <td th:text="${attraction.city}"></td>
-        <td> <a th:href="@{/attraction/edit/{name}(name=${attraction.name})}"><button>Update</button></a></td>
+        <td> <a th:href="@{/attraction/edit/{name}(name=${attraction.name})}"><button>Edit</button></a></td>
         <td> <a th:href="@{/attraction/delete/{name}(name=${attraction.name})}"><button>Delete</button></a></td>
         <td> <a th:href="@{/attraction/{name}/tags(name=${attraction.name})}"><button>Tags</button></a></td>
     </tr>
