--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -1,18 +1,19 @@
 body {
     margin: 0;
+    background-image: url("ANG-Tivoli-Indgang.jpg");
 }
 
 .container {
     display: grid;
     grid-template-areas:
-    "header header"
-    "menu menu"
-    "footer footer";
-    grid-template-columns: 3fr 3fr;
+    "header header header"
+    "menu menu menu"
+    "footer footer footer";
+    grid-template-columns: 3fr 3fr 3fr;
     gap: 5px;
     background-color: black;
     height: 100%;
-    width: 100%;
+    width: 50%;
 }
 
 .container > div {
@@ -32,6 +33,7 @@ body {
     grid-area: menu;
     background-color: #d3ec9b;
     height: 300px;
+    align-content: center;
 }
 
 .container > div.footer {
@@ -43,6 +45,16 @@ body {
 h1 {
     width: 100%;
     height: 100%;
+}
+
+th {
+    text-align: left;
+}
+
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+    padding: 5px;
 }
 
 .socials {
