--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -6,10 +6,11 @@ body {
 .container {
     display: grid;
     grid-template-areas:
-    "header header header"
-    "menu menu menu"
-    "footer footer footer";
-    grid-template-columns: 3fr 3fr 3fr;
+    "header"
+    "menu"
+    "footer";
+    grid-template-rows: auto 1fr auto;
+    grid-template-columns: 3fr;
     gap: 5px;
     background-color: black;
     height: 100%;
