--- a/src/main/resources/templates/attractionList.html
+++ b/src/main/resources/templates/attractionList.html
@@ -8,49 +8,51 @@
 <body>
 <div class="container">
     <div class="header">
-<h1>Attractions</h1></div>
+        <h1>Attractions</h1></div>
 
 
-<div class="menu">
-    <table>
+    <div class="menu">
+        <table>
 
-        <tr th:if="${attractions.isEmpty()}">There are no attractions</tr>
-        <tr th:if="${!attractions.isEmpty()}">
-            <th>Name</th>
-            <th>Description</th>
-            <th>City</th>
-        </tr>
+            <tr th:if="${attractions.isEmpty()}">There are no attractions</tr>
+            <tr th:if="${!attractions.isEmpty()}">
+                <th>Name</th>
+                <th>Description</th>
+                <th>City</th>
+            </tr>
 
-        <tr th:each="attraction: ${attractions}">
-            <td th:text="${attraction.name}"></td>
-            <td th:text="${attraction.description}"></td>
-            <td th:text="${attraction.city}"></td>
-            <td><a th:href="@{/attraction/edit/{name}(name=${attraction.name})}">
-                <button>Edit</button>
-            </a></td>
+            <tr th:each="attraction: ${attractions}">
+                <td th:text="${attraction.name}"></td>
+                <td th:text="${attraction.description}"></td>
+                <td th:text="${attraction.city}"></td>
+                <td><a th:href="@{/attraction/edit/{name}(name=${attraction.name})}">
+                    <button>Edit</button>
+                </a></td>
 
-            <td>
-                <form th:action="@{/attraction/delete/{name}(name=${attraction.name})}" method="post">
-                    <button type="submit">Delete</button>
-                </form>
-            </td>
+                <td>
+                    <form th:action="@{/attraction/delete/{name}(name=${attraction.name})}" method="post">
+                        <button type="submit">Delete</button>
+                    </form>
+                </td>
 
-            <td><a th:href="@{/attraction/{name}/tags(name=${attraction.name})}">
-                <button>Tags</button>
-            </a></td>
-        </tr>
+                <td><a th:href="@{/attraction/{name}/tags(name=${attraction.name})}">
+                    <button>Tags</button>
+                </a></td>
+            </tr>
 
-    </table>
+        </table>
 
-<a th:href="@{/attraction/add}">
-    <button>Add attraction</button>
-</a>
-</div>
-    <div class="footer"><footer>Kontakt info:<br>
-<a href="http://github.com/SimAbild/Turistguide2.git">
-    <img src="25231.png" alt="github" class="socials"></a>
-</footer>
-</div>
+        <a th:href="@{/attraction/add}">
+            <button>Add attraction</button>
+        </a>
+    </div>
+
+    <div class="footer">
+        <footer>Kontakt info:<br>
+            <a href="http://github.com/SimAbild/Turistguide2.git">
+                <img th:src="@{/25231.png}" alt="github" class="socials"></a>
+        </footer>
+    </div>
 </div>
 </body>
 </html>
