--- a/src/main/resources/templates/attraction-edit-form.html
+++ b/src/main/resources/templates/attraction-edit-form.html
@@ -19,6 +19,11 @@
 
     <br>
 
+    <label>Entry fee</label>
+    <input type="number" th:field="*{entryFee}">
+
+    <br>
+
     <label>City:</label>
     <select th:field="*{city}">
         <option value="">--Please select--</option>
