--- a/src/main/resources/templates/attractionList.html
+++ b/src/main/resources/templates/attractionList.html
@@ -9,41 +9,53 @@
 <h1>Attractions</h1>
 
 
+<table>
 
-    <table>
+    <tr th:if="${attractions.isEmpty()}">There are no attractions</tr>
+    <tr th:if="${!attractions.isEmpty()}">
+        <th>Name</th>
+        <th>Description</th>
+        <th>City</th>
+        <th>Entry fee</th>
+        <th></th>
+        <th></th>
+    </tr>
 
-        <tr th:if="${attractions.isEmpty()}">There are no attractions</tr>
-        <tr th:if="${!attractions.isEmpty()}">
-            <th>Name</th>
-            <th>Description</th>
-            <th>City</th>
-            <th></th>
-        </tr>
+    <tr th:each="attraction: ${attractions}">
+        <td th:text="${attraction.name}"></td>
+        <td th:text="${attraction.description}"></td>
+        <td th:text="${attraction.city}"></td>
+        <td th:text="${attraction.entryFee}"></td>
+        <td th:text="kr"></td>
 
-        <tr th:each="attraction: ${attractions}">
-            <td th:text="${attraction.name}"></td>
-            <td th:text="${attraction.description}"></td>
-            <td th:text="${attraction.city}"></td>
-            <td><a th:href="@{/attraction/edit/{name}(name=${attraction.name})}">
-                <button>Edit</button>
-            </a></td>
+        <td><a th:href="@{/attraction/edit/{name}(name=${attraction.name})}">
+            <button>Edit</button>
+        </a></td>
 
-            <td>
-                <form th:action="@{/attraction/delete/{name}(name=${attraction.name})}" method="post">
-                    <button type="submit">Delete</button>
-                </form>
-            </td>
+        <td>
+            <form th:action="@{/attraction/delete/{name}(name=${attraction.name})}" method="post">
+                <button type="submit">Delete</button>
+            </form>
+        </td>
 
-            <td><a th:href="@{/attraction/{name}/tags(name=${attraction.name})}">
-                <button>Tags</button>
-            </a></td>
-        </tr>
+        <td><a th:href="@{/attraction/{name}/tags(name=${attraction.name})}">
+            <button>Tags</button>
+        </a></td>
+    </tr>
 
-    </table>
+    <tr>
+        <td>
+            <a th:href="@{/attraction/add}">
+                <button>Add attraction</button>
+            </a>
+        </td>
 
+        <td></td>
+        <td></td>
+        <td></td>
+        <td><button>euro</button></td>
+    </tr>
+</table>
 
-<a th:href="@{/attraction/add}">
-    <button>Add attraction</button>
-</a>
 </body>
 </html>
