--- a/src/main/resources/templates/attraction-add-form.html
+++ b/src/main/resources/templates/attraction-add-form.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Add attraction</title>
+    <link th:href="@{/add.css}" rel="stylesheet">
 </head>
 <body>
 <h1>Add attraction</h1>
@@ -10,33 +11,43 @@
 <form action="#" th:action="@{/attraction/save}" th:object="${attraction}" method="post">
 
     <label>Name:</label>
-    <input type="text" th:field="*{name}">
+    <label>
+        <input type="text" th:field="*{name}">
+    </label>
 
-    <br>
+    <br><br>
 
     <label>Description:</label>
-    <input type="text" th:field="*{description}">
+    <label>
+        <input type="text" th:field="*{description}">
+    </label>
 
-    <br>
+    <br><br>
 
     <label>City:</label>
-    <select th:field="*{city}">
-        <option value="">--Please select--</option>
-        <option th:each="town : ${allCities}" th:value="${town}" th:text="${town}"></option>
-    </select>
+    <label>
+        <select th:field="*{city}">
+            <option value="">--Please select--</option>
+            <option th:each="town : ${allCities}" th:value="${town}" th:text="${town}"></option>
+        </select>
+    </label>
 
-    <br>
+    <br><br><br>
 
     <label>Tags:</label>
-    <div th:each="tag : ${allTags}">
-        <input type="checkbox" th:field="*{tags}" th:value="${tag}" th:text="${tag}"/>
+    <br><br>
+    <div th:each="tag : ${allTags}" class="checkbox-tags">
+        <label>
+            <input type="checkbox" th:field="*{tags}" th:value="${tag}" th:text="${tag}"/>
+        </label>
     </div>
 
-    <br>
+    <br><br>
 
     <button type="submit">Save</button>
 
+    <button type="button" onclick="window.location.href='/attraction/attractions'">Cancel</button>
+
 </form>
-<a th:href="@{/attraction/attractions}"><button>Cancel</button></a>
 </body>
 </html>
