--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -1,29 +1,38 @@
 body {
     margin: 0;
-    background-image: url("ANG-Tivoli-Indgang.jpg");
+    background-color: #d3ec9b;
+}
+
+.checkbox-tags {
+    display: inline-block;
+}
+
+form label {
+    display: inline-block;
+    width: 120px;
+    text-align: left;
 }
 
 .container {
     display: grid;
     grid-template-areas:
-    "header"
-    "menu"
-    "footer";
+    "header header"
+    "menu picture"
+    "footer footer";
     grid-template-rows: auto 1fr auto;
-    grid-template-columns: 3fr;
+    grid-template-columns: 3fr 3fr;
     gap: 5px;
     background-color: black;
     height: 100%;
-    width: 50%;
+    width: 100%;
 }
 
 .container > div {
-    background-color: rgba(255, 255, 255, 0.8);
-    padding: 50px;
+    padding: 45px;
 }
 
 .container > div.header {
-    background-color: darkorange;
+    background-color: #d3ec9b;
     grid-area: header;
     text-align: center;
     height: 75px;
@@ -32,24 +41,30 @@ body {
 
 .container > div.menu {
     grid-area: menu;
-    background-color: #d3ec9b;
     height: 300px;
-    align-content: center;
+    align-content: start;
+    background-color: white;
+}
+
+.container > div.picture {
+    background-image: url("ANG-Tivoli-Indgang.jpg");
 }
 
 .container > div.footer {
     grid-area: footer;
-    background-color: aquamarine;
-    height: 30px;
+    background-color: #ed9556;
+    height: fit-content;
 }
 
 h1 {
     width: 100%;
     height: 100%;
+    color: black;
 }
 
 th {
     text-align: left;
+    background-color: #d3ec9b;
 }
 
 table, th, td {
