fixed div issue

--- a/src/main/resources/templates/attractionList.html
+++ b/src/main/resources/templates/attractionList.html
@@ -47,6 +47,7 @@
     <button>Add attraction</button>
 </a>
         </div>
+        </div>
         <div class="footer">
     <footer>Kontakt info:<br>
     <a href="https://github.com/SimAbild/turistguide.git" target="_blank">
