fixed div issue

--- a/src/main/resources/templates/attractionList.html
+++ b/src/main/resources/templates/attractionList.html
@@ -49,12 +49,12 @@
         </div>
         </div>
         <div class="footer">
-    <footer>Kontakt info:<br>
+    <footer>Contact info:<br>
     <a href="https://github.com/SimAbild/turistguide.git" target="_blank">
         <img th:src="@{/githublogo.png}" alt="github" class="socials"></a>
     <a href="https://www.instagram.com/_ekdigital?igsh=ZWNzY3MxcGRhcHli" target="_blank">
         <img th:src="@{/Instagram_icon.png}" alt="instagram" class="socials"></a>
-</footer>
+    </footer></div>
 </div>
 </body>
 </html>
