added s to http, so that https

--- a/src/main/resources/templates/attractionList.html
+++ b/src/main/resources/templates/attractionList.html
@@ -54,7 +54,7 @@
 
     <div class="footer">
         <footer>Kontakt info:<br><br>
-            <a href="http://github.com/SimAbild/Turistguide2.git">
+            <a href="https://github.com/SimAbild/Turistguide2.git">
                 <img th:src="@{/25231.png}" alt="github" class="socials"></a>
         </footer>
     </div>
