--- a/src/main/resources/templates/attractionList.html
+++ b/src/main/resources/templates/attractionList.html
@@ -8,7 +8,7 @@
 <body>
 <div class="container">
     <div class="header">
-        <h1>TouristAttractions in Denmark</h1></div>
+        <h1>Tourist attractions in Denmark</h1></div>
 
 
     <div class="menu">
@@ -45,12 +45,12 @@
 
         </table>
         <br>
+        <div class="addButton">
         <a th:href="@{/attraction/add}">
             <button>Add attraction</button>
         </a>
+        </div>
     </div>
-
-    <div class="picture"></div>
 
     <div class="footer">
         <footer>Kontakt info:<br><br>
