--- a/src/main/resources/templates/attraction-edit-form.html
+++ b/src/main/resources/templates/attraction-edit-form.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Edit attraction</title>
+    <link th:href="@{/add.css}" rel="stylesheet">
 </head>
 <body>
 <h1>Edit attraction</h1>
@@ -12,12 +13,12 @@
     <label>Name:</label>
     <input type="text" th:field="*{name}" readonly>
 
-    <br>
+    <br><br>
 
     <label>Description:</label>
     <input type="text" th:field="*{description}">
 
-    <br>
+    <br><br>
 
     <label>City:</label>
     <select th:field="*{city}">
@@ -25,20 +26,22 @@
         <option th:each="town : ${allCities}" th:value="${town}" th:text="${town}"></option>
     </select>
 
-    <br>
+    <br><br><br>
 
     <label>Tags:</label>
-    <div th:each="tag : ${allTags}">
+
+    <br><br>
+
+    <div th:each="tag : ${allTags}" class="checkbox-tags">
         <input type="checkbox" th:field="*{tags}" th:value="${tag}" th:text="${tag}"/>
     </div>
 
-    <br>
+    <br><br>
 
     <button type="submit">Save</button>
 
+    <button type="button" onclick="window.location.href='/attraction/attractions'">Cancel</button>
+
 </form>
-<a th:href="@{/attraction/attractions}">
-    <button>Cancel</button>
-</a>
 </body>
 </html>
