--- a/src/main/resources/templates/attractionList.html
+++ b/src/main/resources/templates/attractionList.html
@@ -25,8 +25,7 @@
         <td th:text="${attraction.name}"></td>
         <td th:text="${attraction.description}"></td>
         <td th:text="${attraction.city}"></td>
-        <td th:text="${attraction.entryFee}"></td>
-        <td th:text="kr"></td>
+        <td th:text="${attraction.entryFee} + kr"></td>
 
         <td><a th:href="@{/attraction/edit/{name}(name=${attraction.name})}">
             <button>Edit</button>
@@ -50,7 +49,6 @@
             </a>
         </td>
 
-        <td></td>
         <td></td>
         <td></td>
         <td><button>euro</button></td>
