--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -1,6 +1,8 @@
 body {
     margin: 0;
-}
+    background: #1f3a4d;
+    background: linear-gradient(133deg, rgba(31, 58, 77, 1) 0%, rgba(33, 130, 119, 1) 100%);
+    }
 
 .container {
     display: grid;
@@ -15,7 +17,6 @@ body {
 }
 
 .container > div {
-    background-color: white;
     padding: 0;
 }
 
@@ -23,8 +24,8 @@ body {
     position: relative;
     grid-area: header;
     text-align: center;
-    background-image: url("GettyImages-1587697699.jpg");
-    background-position: center;
+    background-image: url("dbb00bb9-0886-43a8-917a-40c139b28731.png");
+    background-position: bottom;
     background-size: cover;
     background-repeat: no-repeat;
     height: 375px;
@@ -36,16 +37,17 @@ body {
     bottom: -40px;
     left: 50%;
     transform: translateX(-50%);
-    background-color: white;
     padding: 15px 40px;
     border-radius: 8px;
     max-width: 80%;
     text-align: center;
+    background: linear-gradient(133deg, #20555d 0%, #206566 100%);
 }
 
 .header-text-box h1 {
     margin: 0 0 10px 0;
     font-size: 2rem;
+    color: white;
 }
 
 .content {
@@ -58,10 +60,11 @@ body {
     width: 100%;
     margin: 0 auto;
     text-align: left;
+    color: white;
 }
 
 table, th, td {
-    border: 1px solid black;
+    border: 1px solid white;
     border-collapse: collapse;
     padding: 5px;
 }
@@ -73,11 +76,11 @@ table, th, td {
 }
 
 .footer {
-    background-color: white;
     padding: 10px;
     width: 100%;
     bottom: 0;
     left: 0;
+    color: white;
 }
 
 .socials {
