--- a/src/main/resources/templates/attraction-edit-form.html
+++ b/src/main/resources/templates/attraction-edit-form.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Edit attraction</title>
     <link th:href="@{/add.css}" rel="stylesheet">
+    <link rel="icon" type="image/webp" th:href="@{/flag.webp}">
 </head>
 <body>
 <h1>Edit attraction</h1>
