Ændret lidt HTML og lavet CSS

--- a/src/main/resources/templates/forside.html
+++ b/src/main/resources/templates/forside.html
@@ -9,11 +9,14 @@
 
 <div class="titlebox">
     <div class="titleheader">
-        <h1><span>Velkommen til JMS Michelin touristbog</h1></span>
+        <h1>Welcome to JMS Michelin touristbook</h1>
     </div>
 </div>
 
-<div class="imagebox">
+<img th:src="@{/forsidebillede.png}" alt="Forside billede" class="forside-image">
+
+<div class="take-me-to-touristbook">
+    <a href="/attraction/attractions">Read tourist book</a>
 </div>
 
 </body>
