--- a/src/main/resources/static/forside.css
+++ b/src/main/resources/static/forside.css
@@ -10,12 +10,55 @@
     padding: 5px;
 }
 
-.imagebox{
+body {
     margin: 0;
-    background-image: url("20250915_1118_Adventure Guide Revealed_simple_compose_01k56ajncvenj8wsmgqks9pvw8.png");
-    background-repeat: no-repeat;
-    background-size: 100%;
+    background: #1f3a4d;
+    background: linear-gradient(133deg, rgba(31, 58, 77, 1) 0%, rgba(33, 130, 119, 1) 100%);
+}
 
+.titlebox {
+    background: linear-gradient(133deg, #1f3a4d, #218277);
+    padding: 20px;
+    text-align: center;
+}
+
+.titleheader h1 {
+    color: white;
+}
+
+.forside-image {
+    width: 100%;
+    aspect-ratio: 2.5;
+}
+
+.take-me-to-touristbook a {
+    font-size: 20px;
+    color: white;
+
+    /* Transparent background */
+    background-color: #2f7f75;
+
+    /* Hvid kant og runde hjørner */
+    border: 2px solid white;
+    border-radius: 15px;
+    padding: 10px 20px;
+
+    /* Centrer på skærmen */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    /* For et pænt tryk-effekt */
+    cursor: pointer;
+
+    /* Eventuelt en lille animation ved hover */
+    transition: all 0.3s ease;
+
+}
+
+.take-me-to-touristbook:hover a {
+    background-color: rgba(46, 126, 117, 0.34); /* Let baggrund på hover */
 }
 
 body {
