Lavet admin knap

--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -75,6 +75,13 @@ table, th, td {
     padding-top: 10px;
 }
 
+.frontpage-button {
+    max-width: 800px;
+    margin: 0 auto;
+    padding-top: 10px;
+}
+
+
 .footer {
     padding: 10px;
     width: 100%;
