--- a/src/main/resources/templates/attraction-edit-form.html
+++ b/src/main/resources/templates/attraction-edit-form.html
@@ -41,7 +41,7 @@
 
     <button type="submit">Save</button>
 
-    <button type="button" onclick="window.location.href='/attraction/attractions'">Cancel</button>
+    <button type="button" onclick="window.location.href='/attraction/adminpage'">Cancel</button>
 
 </form>
 </body>
