--- a/src/main/resources/static/forside.css
+++ b/src/main/resources/static/forside.css
@@ -61,6 +61,39 @@ body {
     background-color: rgba(46, 126, 117, 0.34); /* Let baggrund på hover */
 }
 
+.take-me-to-admin-page a {
+    font-size: 16px;
+    color: white;
+    text-align: center;
+
+    white-space: nowrap;
+
+    /* Transparent background */
+    background-color: #2f7f75;
+
+    /* Hvid kant og runde hjørner */
+    border: 2px solid white;
+    border-radius: 15px;
+    padding: 10px 20px;
+
+    /* Centrer på skærmen */
+    position: fixed;
+    bottom: 10px;
+    right: -50px;
+    transform: translate(-50%, -50%);
+
+    /* For et pænt tryk-effekt */
+    cursor: pointer;
+
+    /* Eventuelt en lille animation ved hover */
+    transition: all 0.3s ease;
+
+}
+
+.take-me-to-admin-page:hover a {
+    background-color: rgba(46, 126, 117, 0.34); /* Let baggrund på hover */
+}
+
 body {
     margin: 0;
 }
