--- a/src/main/resources/templates/attraction-add-form.html
+++ b/src/main/resources/templates/attraction-add-form.html
@@ -45,7 +45,7 @@
 
     <button type="submit">Save</button>
 
-    <button type="button" onclick="window.location.href='/attraction/attractions'">Cancel</button>
+    <button type="button" onclick="window.location.href='/attraction/adminpage'">Cancel</button>
 
 </form>
 </body>
