--- a/src/main/resources/templates/forside.html
+++ b/src/main/resources/templates/forside.html
@@ -19,5 +19,9 @@
     <a href="/attraction/attractions">Read tourist book</a>
 </div>
 
+<div class="take-me-to-admin-page">
+    <a href="/attraction/adminpage">Admin Page</a>
+</div>
+
 </body>
 </html>
