Lavet login side til admins

--- a/src/main/resources/templates/forside.html
+++ b/src/main/resources/templates/forside.html
@@ -20,7 +20,7 @@
 </div>
 
 <div class="take-me-to-admin-page">
-    <a href="/attraction/adminpage">Admin Page</a>
+    <a href="/attraction/login">Admin Page</a>
 </div>
 
 </body>
