--- a/src/main/resources/static/forside.css
+++ b/src/main/resources/static/forside.css
@@ -34,6 +34,7 @@ body {
 .take-me-to-touristbook a {
     font-size: 20px;
     color: white;
+    text-decoration: none;
 
     /* Transparent background */
     background-color: #2f7f75;
@@ -65,6 +66,7 @@ body {
     font-size: 16px;
     color: white;
     text-align: center;
+    text-decoration: none;
 
     white-space: nowrap;
 
