--- a/src/main/resources/templates/admin_attractionList.html
+++ b/src/main/resources/templates/admin_attractionList.html
@@ -11,6 +11,7 @@
     <div class="header">
         <div class="header-text-box">
             <h1>Experience the best things <br> Denmark has to offer</h1>
+            <p>Hej Simon kan du se mig nu</p>
         </div>
     </div>
     <div class="content">
