--- a/src/main/resources/templates/attraction-add-form.html
+++ b/src/main/resources/templates/attraction-add-form.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Add attraction</title>
-    <link th:href="@{/add.css}" rel="stylesheet">
-    <link rel="icon" type="image/webp" th:href="@{/flag.webp}">
+    <link th:href="@{/css/add.css}" rel="stylesheet">
+    <link rel="icon" type="image/webp" th:href="@{/images/flag.webp}">
 </head>
 <body>
 <h1>Add attraction</h1>
