--- a/src/main/resources/templates/tags.html
+++ b/src/main/resources/templates/tags.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Tags</title>
-    <link th:href="@{/tags.css}" rel="stylesheet">
-    <link rel="icon" type="image/webp" th:href="@{/flag.webp}">
+    <link th:href="@{/css/tags.css}" rel="stylesheet">
+    <link rel="icon" type="image/webp" th:href="@{/images/flag.webp}">
 </head>
 <body>
     <h1 th:text="'Tags for ' + ${attraction.name}"></h1>
@@ -19,11 +19,11 @@
     </div>
 
     <img th:if="${attraction.name == 'Tivoli'}"
-         th:src="@{/amusement-park-7763859_1280.webp}"
+         th:src="@{/images/amusement-park-7763859_1280.webp}"
          class="attraction-img">
 
     <img th:if="${attraction.name == 'Nyhavn'}"
-         th:src="@{/e5ceed1b-347a-43cc-bfba-f06eca974f47_rw_1920.jpg}"
+         th:src="@{/images/e5ceed1b-347a-43cc-bfba-f06eca974f47_rw_1920.jpg}"
          class="attraction-img">
 
 </body>
