--- a/src/main/resources/templates/forside.html
+++ b/src/main/resources/templates/forside.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Forside</title>
-    <link th:href="@{/forside.css}" rel="stylesheet">
+    <link th:href="@{/css/forside.css}" rel="stylesheet">
 </head>
 <body>
 
@@ -13,7 +13,7 @@
     </div>
 </div>
 
-<img th:src="@{/forsidebillede.png}" alt="Forside billede" class="forside-image">
+<img th:src="@{/images/forsidebillede.png}" alt="Forside billede" class="forside-image">
 
 <div class="take-me-to-touristbook">
     <a href="/attraction/attractions">Read tourist book</a>
