--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,14 +1,17 @@
 body {
     margin: 0;
-    background: #1f3a4d;
+    height: 100vh; /* fyld hele skærmen */
     background: linear-gradient(133deg, rgba(31, 58, 77, 1) 0%, rgba(33, 130, 119, 1) 100%);
 
+    display: flex;              /* aktiver flexbox */
+    justify-content: center;    /* centrer vandret */
+    align-items: center;        /* centrer lodret */
 }
 
-
-.logintable
-{
-    margin: 0 auto;
-
+.logintable {
     color: white;
+    background: rgba(0, 0, 0, 0.4); /* lille baggrund så teksten står bedre */
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
 }
