lavet en main css folder

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -24,7 +24,7 @@ body {
     position: relative;
     grid-area: header;
     text-align: center;
-    background-image: url("dbb00bb9-0886-43a8-917a-40c139b28731.png");
+    background-image: url("../dbb00bb9-0886-43a8-917a-40c139b28731.png");
     background-position: bottom;
     background-size: cover;
     background-repeat: no-repeat;
