--- a/src/main/resources/templates/attraction-edit-form.html
+++ b/src/main/resources/templates/attraction-edit-form.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Edit attraction</title>
-    <link th:href="@{/add.css}" rel="stylesheet">
+    <link th:href="@{/css/add.css}" rel="stylesheet">
     <link rel="icon" type="image/webp" th:href="@{/flag.webp}">
 </head>
 <body>
