--- a/src/main/resources/templates/tags.html
+++ b/src/main/resources/templates/tags.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Tags</title>
-    <link th:href="@{/tags.css}" rel="stylesheet">
+    <link th:href="@{/css/tags.css}" rel="stylesheet">
     <link rel="icon" type="image/webp" th:href="@{/flag.webp}">
 </head>
 <body>
