--- a/src/main/resources/templates/attractionList.html
+++ b/src/main/resources/templates/attractionList.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Show Attractions</title>
-    <link th:href="@{/main.css}" rel="stylesheet">
+    <link th:href="@{/css/main.css}" rel="stylesheet">
     <link rel="icon" type="image/webp" th:href="@{/flag.webp}">
 </head>
 <body>
