--- a/src/main/resources/templates/forside.html
+++ b/src/main/resources/templates/forside.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Forside</title>
-    <link th:href="@{/forside.css}" rel="stylesheet">
+    <link th:href="@{/css/forside.css}" rel="stylesheet">
 </head>
 <body>
 
