lavet en images folder, refaktoret kode så det passer til forsiden

--- a/src/main/resources/templates/Admin_attractionList.html
+++ b/src/main/resources/templates/Admin_attractionList.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Show Attractions</title>
     <link th:href="@{/css/main.css}" rel="stylesheet">
-    <link rel="icon" type="image/webp" th:href="@{/flag.webp}">
+    <link rel="icon" type="image/webp" th:href="@{/images/flag.webp}">
 </head>
 <body>
 <div class="container">
@@ -55,9 +55,9 @@
     <div class="footer">
         <footer>Contact info:<br>
             <a href="https://github.com/SimAbild/turistguide.git" target="_blank">
-                <img th:src="@{/githublogo.png}" alt="github" class="socials"></a>
+                <img th:src="@{/images/githublogo.png}" alt="github" class="socials"></a>
             <a href="https://www.instagram.com/_ekdigital?igsh=ZWNzY3MxcGRhcHli" target="_blank">
-                <img th:src="@{/Instagram_icon.png}" alt="instagram" class="socials"></a>
+                <img th:src="@{/images/Instagram_icon.png}" alt="instagram" class="socials"></a>
         </footer>
     </div>
 </div>
