--- a/src/main/resources/templates/attraction-add-form.html
+++ b/src/main/resources/templates/attraction-add-form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Add attraction</title>
     <link th:href="@{/css/add.css}" rel="stylesheet">
-    <link rel="icon" type="image/webp" th:href="@{/flag.webp}">
+    <link rel="icon" type="image/webp" th:href="@{/images/flag.webp}">
 </head>
 <body>
 <h1>Add attraction</h1>
