ændret endpoints til at matche forsiden

--- a/src/main/resources/templates/Admin_attractionList.html
+++ b/src/main/resources/templates/Admin_attractionList.html
@@ -26,12 +26,12 @@
                 <td th:text="${attraction.name}"></td>
                 <td th:text="${attraction.description}"></td>
                 <td th:text="${attraction.city}"></td>
-                <td><a th:href="@{/attraction/edit/{name}(name=${attraction.name})}">
+                <td><a th:href="@{/edit/{name}(name=${attraction.name})}">
                     <button>Edit</button>
                 </a></td>
 
                 <td>
-                    <form th:action="@{/attraction/delete/{name}(name=${attraction.name})}" method="post">
+                    <form th:action="@{/delete/{name}(name=${attraction.name})}" method="post">
                         <button type="submit">Delete</button>
                     </form>
                 </td>
@@ -39,13 +39,13 @@
         </table>
 
         <div class="addAttraction">
-            <a th:href="@{/attraction/add}">
+            <a th:href="@{/add}">
                 <button>Add attraction</button>
             </a>
         </div>
 
         <div class="frontpage-button">
-            <a th:href="@{/attraction}">
+            <a th:href="@{/}">
                 <button>Frontpage</button>
             </a>
         </div>
