--- a/src/main/resources/templates/tags.html
+++ b/src/main/resources/templates/tags.html
@@ -15,7 +15,7 @@
     </tr>
 </table>
 
-<a th:href="@{/attraction/attractions}"><button>Go Back</button></a>
+<a th:href="@{/attractions}"><button>Go Back</button></a>
     </div>
 
     <img th:if="${attraction.name == 'Tivoli'}"
