--- a/src/main/resources/templates/attraction-add-form.html
+++ b/src/main/resources/templates/attraction-add-form.html
@@ -9,7 +9,7 @@
 <body>
 <h1>Add attraction</h1>
 
-<form action="#" th:action="@{/attraction/save}" th:object="${attraction}" method="post">
+<form action="#" th:action="@{/save}" th:object="${attraction}" method="post">
 
     <label>Name:</label>
     <label>
@@ -45,7 +45,7 @@
 
     <button type="submit">Save</button>
 
-    <button type="button" onclick="window.location.href='/attraction/adminpage'">Cancel</button>
+    <button type="button" onclick="window.location.href='/adminpage'">Cancel</button>
 
 </form>
 </body>
