Ændret så det passer med at login og adminpage er gode

--- a/src/main/resources/templates/forside.html
+++ b/src/main/resources/templates/forside.html
@@ -20,7 +20,7 @@
 </div>
 
 <div class="take-me-to-admin-page">
-    <a href="/adminpage">Admin Page</a>
+    <a href="/login">Admin Page</a>
 </div>
 
 </body>
