--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
 <div class="logintable">
     <h2>Admin Login</h2>
 
-    <form th:action="@{/attraction/login}" method="post">
+    <form th:action="@{/login}" method="post">
 
         <label>Username:</label>
         <input type="text" name="username" required><br><br>
