--- a/src/main/resources/templates/admin_attractionList.html
+++ b/src/main/resources/templates/admin_attractionList.html
@@ -25,7 +25,7 @@
             <tr th:each="attraction: ${attractions}">
                 <td th:text="${attraction.name}"></td>
                 <td th:text="${attraction.description}"></td>
-                <td th:text="${attraction.city}"></td>
+                <td th:text="${attraction.cityID}"></td>
                 <td><a th:href="@{/edit/{name}(name=${attraction.name})}">
                     <button>Edit</button>
                 </a></td>
