--- a/src/main/resources/templates/attractionList.html
+++ b/src/main/resources/templates/attractionList.html
@@ -28,12 +28,11 @@
             <tr th:each="attraction: ${attractions}">
                 <td th:text="${attraction.name}"></td>
                 <td th:text="${attraction.description}"></td>
-                <td th:text="${attraction.city}"></td>
+                <td th:text="${attraction.cityID}"></td>
 
                 <td><a th:href="@{/{name}/tags(name=${attraction.name})}">
                     <button>Tags</button>
                 </a></td>
-
             </tr>
         </table>
 
