ptilføjet kodekommentarer og ændret getTouristAttractions metoden, så der bliver vist cityName istedet for cityID i endpointet

--- a/src/main/resources/templates/attractionList.html
+++ b/src/main/resources/templates/attractionList.html
@@ -28,7 +28,7 @@
             <tr th:each="attraction: ${attractions}">
                 <td th:text="${attraction.name}"></td>
                 <td th:text="${attraction.description}"></td>
-                <td th:text="${attraction.cityID}"></td>
+                <td th:text="${attraction.cityName}"></td>
 
                 <td><a th:href="@{/{name}/tags(name=${attraction.name})}">
                     <button>Tags</button>
